@@ -3,6 +3,7 @@
 * Improved basic demo, validating confirm-password field after password changed
 * Fixed basic validation to pass the untrimmed input value as the first parameter to validation methods, changed required accordingly; breaks existing custom method that rely on the trimming
 * Added italian (it) and romanian (ro) localization 
+* Extended rules("add") to accept messages propery: use to specify add custom messages to an element via rules("add", { messages: { required: "Required! " } }); 
 
 1.4
 ---
